--- a/TP_2_Cascara/TP_2_Cascara.cbp
+++ b/TP_2_Cascara/TP_2_Cascara.cbp
@@ -31,12 +31,16 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="../Input/input.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="funciones.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="funciones.h">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
+		<Unit filename="input.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
